# Git-Janitor

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/repo_sanitizer/: ai_explainer.py  config.py  git_handler.py  logger.py  main.py  ui.py  undo.py
src/repo_sanitizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
test/: test_analyzer.py
